Fixed the z-index for side drawer

--- a/webapp/src/styles/global.scss
+++ b/webapp/src/styles/global.scss
@@ -67,3 +67,7 @@
       }
     }
   }
+
+  .nav-sidebar_menu {
+      z-index: 10001 !important;
+  }
